Changes in tframePlus version 2014.10-1

   o	Changed require() to requireNamespace() for WriteXLS.

   o	Minor adjustments to add package namespace references in calls.

Changes in tframePlus version 2013.9-1

   o	Cleaned up Depends/Imports/Suggests and ::: usage.

   o	Minor changes related to Depends and Imports changes in other packages.

Changes in tframePlus version 2012.8-1

   o	Added utilities tfSet.POSIXct and tfSet.Date (not exported) to 
   	facilitate converting between POSIXct and Date time indexes.

Changes in tframePlus version 2012.4-2

   o	Added tfplot to Suggests in DESCRIPTION.

Changes in tframePlus version 2012.4-1

   o	Setting of zoo and xts tframe fixed to not drop series names.

Changes in tframePlus version 2011.11-2

   o	Updated some copyright dates.

Changes in tframePlus version 2011.11-1

   o	Updated maintainer email address.

Changes in tframePlus version 2011.8-1

   o	Fixed mechanism for changing time series representation when several
   	packages are loaded, with competing mechanisms for as.Date() and time().

Changes in tframePlus version 2011.6-1

   o	Added TSwriteCSV for writing csv files of time series data.

Changes in tframePlus version 2011.3-1

   o	Converted both periods() and tfperiods() to Tobs(). (The distinction is
   	no longer needed.)

   o	Added methods and tests for timeSeries series. S4 methods also require
   	NAMESPACE exports.

   o	Added methods and tests for tis series (as used by package fame).

   o	Added tests for its series and fixed tbind.its bug (it did not work).

   o	Added methods and tests for xts series.

   o	Added a check that periods of the data correspond to periods of the
   	tframe for zoo constructor (otherwise recycling happens without warning)

Changes in tframePlus version 2010.4-1

   o	Added argument dateHeader to TSwriteXLS.

   o	Fixed bug in TSwriteXLS with rounding problem causing incorrectly 
	mapping of some ts dates into correct month.

